Added translation for title "shorten current page" of "globe" image.

--- a/popup.html
+++ b/popup.html
@@ -1692,6 +1692,7 @@ function initializeWorkspace() {
 
     WorkList.init();
     Autocomplete.init();
+    $("#shorten_current").attr("title",chrome.i18n.getMessage("shorten_current"));
   }, 0);
 }
 
