added proposal for auto_url_shortening

--- a/options.html
+++ b/options.html
@@ -425,6 +425,8 @@ function updatePredictedHitsCount() {
     </p>
     <label for="share_include_title" class="i18n" id="l_share_include_title">Include page title (sharing):</label>
     <input type="checkbox" name="share_include_title"><br>
+    <label for="auto_shorten_urls" class="i18n" id="l_auto_shorten_urls">Automatically shorten URLs</label>
+    <input type="checkbox" name="auto_shorten_urls"><br>
   </fieldset>
 
   <fieldset>
