Allowing a maximum number of displayed notifications at once. Closes #182

--- a/background.html
+++ b/background.html
@@ -388,6 +388,10 @@ TweetManager.prototype = {
     if(!tweetsToNotify || tweetsToNotify.length == 0) {
       return;
     }
+    var maxTweetsNotifications = Options.get('notification_max_popups');
+    if(maxTweetsNotifications != -1 && tweetsToNotify.length > maxTweetsNotifications) {
+      tweetsToNotify.splice(maxTweetsNotifications, tweetsToNotify.length - maxTweetsNotifications);
+    }
     this.injectTweets = tweetsToNotify;
 
     var notificationStyle = OptionsBackend.get('tweets_notification_style');
