Added Karmacracy.com urlshortener

--- a/options.html
+++ b/options.html
@@ -65,7 +65,7 @@ $(function() {
 
   var onShortenerChange = function() {
     var shortenerSelect = $("select[name='url_shortener']")[0]
-    if(shortenerSelect.value=='bitly' || shortenerSelect.value=='jmp') {
+    if(shortenerSelect.value=='bitly' || shortenerSelect.value=='jmp' || shortenerSelect.value='karmacracy') {
       $("#shortener_opts").show();
     } else {
       $("#shortener_opts").hide();
