Fixing validation for max popups param.

--- a/options.html
+++ b/options.html
@@ -411,7 +411,7 @@ function updatePredictedHitsCount() {
     <input type="text" name="notification_fade_timeout" validator="required,number,positive" converter="RefreshInterval"><br>
 
     <label for="notification_max_popups" class="i18n" id="l_notification_max_popups">Notifications at once (-1: all):</label>
-    <input type="text" name="notification_max_popups" validator="required,number,positive"><br>
+    <input type="text" name="notification_max_popups" validator="required,number"><br>
   </fieldset>
 
   <fieldset>
