--- a/popup.html
+++ b/popup.html
@@ -829,7 +829,7 @@ var Renderer = {
         //http://daringfireball.net/2009/11/liberal_regex_for_matching_urls
         //
         //I wish JavaScript had character classes
-        'expression': /\b((([\w-]+):\/\/?|www[.])[^\s()<>]+((\([\w\d]+\))|([^,.;:'"`~\s]|\/)))/ig,
+        'expression': /\b((([\w-]+):\/\/?|www[.])[^\s()<>]+((\([\w\d]+\))|([^,.;:'"`~\s]|\/)))/i,
         'replacement': function() {
           var url = RegExp.$1;
           var scheme = RegExp.$3;
@@ -855,7 +855,7 @@ var Renderer = {
       },
       {
         //create hash search links
-        'expression': /([^&\w]|^)(#([\w\u0080-\uffff]*))((?=([^<])*?<a)|(?!.*?<\/a>))/ig,
+        'expression': /([^&\w]|^)(#([\w\u0080-\uffff]*))((?=([^<])*?<a)|(?!.*?<\/a>))/i,
         'replacement': function() {
           var header = RegExp.$1;
           var label  = RegExp.$2;
@@ -873,7 +873,7 @@ var Renderer = {
       },
       {
         //create users links
-        'expression': /(@(\w*))((?=([^<])*?<a)|(?!.*?<\/a>))/ig,
+        'expression': /(@(\w*))((?=([^<])*?<a)|(?!.*?<\/a>))/i,
         'replacement':
         function() {
           var username = RegExp.$2;
@@ -889,7 +889,7 @@ var Renderer = {
       },
       {
         //line breaks
-        'expression': /\r?\n/g,
+        'expression': /\r?\n/,
         'replacement': function() { return document.createElement("br"); }
       }
     ]),
