--- a/tweets_notifier.html
+++ b/tweets_notifier.html
@@ -2,26 +2,30 @@
 <html>
 <head>
   <script type="text/javascript" src="lib/3rdparty/jquery.js"></script>
+  <script type='text/javascript' src='lib/3rdparty/jquery.tipsy.js'></script>
+
   <script type="text/javascript" src="lib/tweet_transforms.js"></script>
+  <script type="text/javascript" src="lib/timeline_template.js"></script>
   <script type="text/javascript" src="lib/tweets_assembler.js"></script>
 
   <link rel="stylesheet" type="text/css" href="css/injectedTweets.css" />
   <link rel="stylesheet" type="text/css" href="css/desktopTweets.css" />
+  <link rel="stylesheet" type="text/css" href="css/tipsy.css" />
 
   <base target="_blank">
 
   <script>
   var OptionsBackend = chrome.extension.getBackgroundPage().OptionsBackend;
+  var urlExpander = chrome.extension.getBackgroundPage().urlExpander;
   var tweetManager = chrome.extension.getBackgroundPage().TweetManager.instance;
 
   $(function() {
-    Renderer.nameAttribute = OptionsBackend.get('name_attribute');
-    Renderer.fadeTimeout = OptionsBackend.get('notification_fade_timeout');
+    var fadeTimeout = OptionsBackend.get('notification_fade_timeout');
 
     var tweet = tweetManager.injectTweets.shift();
-
+    Renderer.setContext('desktop');
     try {
-      $(document.body).prepend(Renderer.simpleAssemblyTweets([tweet]));
+      $(document.body).prepend(Renderer.renderTweet(tweet, false, OptionsBackend.get('name_attribute')));
     } catch(e) {
       console.log(e);
       window.close();
@@ -30,7 +34,7 @@
     setTimeout(function() {
       $("#progress").text(chrome.i18n.getMessage("preventClosing"));
       $('#progress').show().css('bottom', '0px').css('width', '100%')
-            .animate({width: '0px'}, Renderer.fadeTimeout, 'linear', function() {
+            .animate({width: '0px'}, fadeTimeout, 'linear', function() {
         // Tell manager that this tweet shouldn't be marked as read
         tweetManager.shouldNotReadMap[tweet.id] = true;
         window.close();
